--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -37,11 +37,13 @@ h2{
 .choices li{ 
   margin: 0; 
   list-style: none; 
+  color: #888;
 }
 .choices li:before { 
   float: left;
   content: '◆'; 
-  margin-right: 5px;
+  margin-right: 10px;
+  vertical-align: middle;
 }
 
 hr.gradient {
@@ -50,4 +52,34 @@ hr.gradient {
   border: 0;
   height: 1px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+.home {
+  position: relative;
+  min-height: 400px;
+  padding: 25px;
+  color: white;
+}
+
+.home:after {
+  content : "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-image: url('../assets/images/books.jpg');
+  width: 100%;
+  height: 100%;
+  opacity: 0.7;
+  filter: alpha(opacity=30);
+  z-index: -1;
+}
+
+.home a {
+  color: white;
+}
+
+.home h1 {
+  margin-bottom: 40px;
+  text-shadow: 2px 2px #222;
 }
